--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "formspree-deploy": "formspree deploy"
   },
   "dependencies": {
-    "@formspree/react": "^2.3.3",
-    "@heroicons/react": "^2.0.1",
-    "date-fns": "^2.29.2",
-    "date-fns-tz": "^1.3.7",
+    "@formspree/react": "^2.4.1",
+    "@heroicons/react": "^2.0.17",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@formspree/cli": "^0.9.6",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.5",
+    "vite": "^3.2.5"
   }
 }
